tests/negative/gold/shadow4_test.gold
tests/negative/shadow4_test.toit:7:9: error: Definition of 'x' shadows earlier definition
  while x := false:
        ^
tests/negative/shadow4_test.toit:6:3: note: Earlier definition of 'x'
  x := true
  ^
Compilation failed.
